Add divisions API endpoint
